XMLtoCSV/objects/unpackaged/objects/Analytics_Filters_vod__c.object
<CustomObject>
    <description>This object is where saved filters are stored for Analytics.</description>
    <fields>
        <fullName>Analytics_Report_vod__c</fullName>
        <description>The Analytics report for which the filters are saved</description>
        <label>Analytics Report</label>
        <picklist>
            <picklistValues>
                <fullName>Average_Calls_Per_Day_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account_Summary_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reach_And_Frequency_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory_Sales_Analysis_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory_Comparison_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effort_vs_Results_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory_Payer_Analysis_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Filters_vod__c</fullName>
        <description>Define a delimited list of Filter and Filter Values</description>
        <label>Filters</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Analytics Filters</label>
    <nameField>
        <label>Analytics Filters Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analytics Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>